# haskell-server-template

./: CHANGELOG.md  Dockerfile  README.md  config.json  gen-modules.sh  haskell-server-template.cabal
.github/workflows/: haskell.yml
app/: Application.hs  Docs.hs
src/: API.hs  Config.hs  Context.hs  Docs.hs  Entrypoint.hs  Prelude.hs  Server.hs
src/Config/: EKG.hs  HTTP.hs  Log.hs  TLS.hs
src/Server/: API.hs  Config.hs  Context.hs  Docs.hs  Implementation.hs  Main.hs  Monad.hs  Prelude.hs
src/Server/Config/: EKG.hs  HTTP.hs  Log.hs  TLS.hs
test/: spec.hs
