cabal-version:       >=1.10
name:                haskell-server-template
version:             0.1.0.0
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          samuel@simspace.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Server.Config,
                       Server.Prelude,
                       Server.Implementation,
                       Server.Main,
                       Server.API
  hs-source-dirs:      src
  build-depends:       base >=4.12,
                       aeson >=1.5,
                       text >=1.2,
                       servant >=0.18,
                       servant-server >=0.18,
                       warp >=3.3,
                       warp-tls >=3.3,
                       wai >=3.2,
                       unliftio >=0.2,
                       mtl >=2.2,
                       commander-cli >=0.7
  default-language:    Haskell2010
  ghc-options:         -Wall -O0

executable server
  main-is:             Application.hs
  hs-source-dirs:      app
  build-depends:       base >=4.12 && <4.16,
                       haskell-server-template
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -T"
