cabal-version:       >=1.10
name:                haskell-server-template
version:             0.1.0.0
synopsis:            An HTTP server template
description:         An HTTP server template.
homepage:            https://github.com/SamuelSchlesinger/haskell-server-template
bug-reports:         https://github.com/SamuelSchlesinger/haskell-server-template/issues
license-file:        LICENSE
copyright:           2020-2024 Samuel Schlesinger
license:             MIT
author:              Samuel Schlesinger
maintainer:          sgschlesinger@gmail.com
build-type:          Simple
tested-with:         GHC ==8.6.1 ||
                         ==8.6.2 ||
                         ==8.6.3 ||
                         ==8.6.4 ||
                         ==8.6.5 ||
                         ==8.8.1 ||
                         ==8.8.2 ||
                         ==8.8.3 ||
                         ==8.8.4 ||
                         ==8.10.1 ||
                         ==8.10.2

source-repository head
  type: git 
  location: https://github.com/samuelschlesinger/stm-queue

library
  exposed-modules:     Server.Config,
                       Server.Config.HTTP,
                       Server.Config.TLS,
                       Server.Config.Log,
                       Server.Prelude,
                       Server.Monad,
                       Server.Implementation,
                       Server.Main,
                       Server.Docs,
                       Server.API
  hs-source-dirs:      src
  build-depends:       base >=4.12,
                       aeson >=1.5,
                       text >=1.2,
                       servant >=0.18,
                       servant-server >=0.18,
                       servant-docs >=0.11,
                       warp >=3.3,
                       warp-tls >=3.3,
                       wai >=3.2,
                       unliftio >=0.2,
                       mtl >=2.2,
                       commander-cli >=0.7,
                       monad-logger >=0.3,
                       fast-logger >=3.0,
                       wai-extra >=3.1,
                       data-default >=0.7
  default-language:    Haskell2010
  ghc-options:         -Wall -O0

executable server
  main-is:             Application.hs
  hs-source-dirs:      app
  build-depends:       base >=4.12 && <4.16,
                       haskell-server-template
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -T"

executable docs
  main-is:             Docs.hs
  hs-source-dirs:      app
  build-depends:       base >=4.12 && <4.16,
                       haskell-server-template
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -T"

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             spec.hs
  build-depends:       base >=4.12 && <4.16,
                       hspec >=2.7,
                       haskell-server-template
  other-extensions:    PostfixOperators, TypeApplications, BlockArguments
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -T" -O2
  default-language:    Haskell2010
